# example_gcc_cmake_build

./: build.bat  clean.bat  set_env.bat  simple_build.bat
.github/workflows/: main.yml
source/: CMakeLists.txt
source/modul/: Modul.c  Modul.h  Modul2_MapOUT.c  Modul2_MapOUT.h  Modul_MapIN.c  Modul_MapIN.h  Modul_MapOUT.c  Modul_MapOUT.h
source/system/: main.c
